(UNFINISHED) Small code cleanup - Git issue #10960